2004/04/10 00:21 (-0400) muppetman

	* AUTHORS, pm/SimpleList.pm: SimpleList documentation fixes from
	Jason Stirling.

2004/04/09 07:56 (-0400) muppetman

	* gtk-demo/appwindow.pl: remove unsightly warnings
 
	* gtk-demo/sizegroup.pl, gtk-demo/textview.pl: patch from Thierry
	fixes my stupid syntax errors so gtk-demo works again.

2004/04/09 00:30 (-0400) muppetman

	* Gtk2.pm, NEWS, README: stable release 1.041

2004/04/08 23:58 (-0400) muppetman

	* xs/GdkColor.xs, xs/GdkEvent.xs, xs/GdkGC.xs, xs/GdkScreen.xs,
	xs/GdkWindow.xs, xs/GtkTextBuffer.xs, AUTHORS: modified and extended
	a patch from Cory Omand to use explicit version checks to protect
	ourselves when building against unstable gtk+.

2004/04/08 19:44 (-0400) rwmcfa1

	* pm/SimpleList.pm: STORE apparently returns the stored value, we were
	returning 1. this makes it work like normal arrays. and the splce 
	return algorithm was broken, it put undefs into the ret where as the 
	perl array splice doesn't

2004/04/06 18:48 (+0200) kaffeetisch

	* t/GtkTreeView.t
	* xs/GtkTreeView.xs: Allow undef for the path and column arguments
	of get_cell_area and get_background_area.

2004/04/05 16:44 (-0500) rwmcfa1

	* pm/SimpleList.pm: pop/shift didn't return the popped/shifted rows.
	push, unshift didn't reutrn the size of the array.

	* t/GtkSimpleList.t: test out fixes from above

	* xs/GtkHandleBox.xs: added enums apidoc for PositionType and
	ShadowType

2004/04/05 09:50 (-0400) muppetman

	* xs/GtkTreeStore.xs: patch from Thierry Vignaud corrects indentation
	on an xsub to appease validators.

2004/04/04 19:26 (+0200) kaffeetisch

	* t/01.GtkWindow.t: Fix the TODO by allowing both, TRUE and FALSE,
	as the return value of is_active and has_toplevel_focus.

	* t/Gdk.t: Don't fail the keyboard_grab test if there already is
	an active keyboard grab.

	* t/PangoTabs.t: Test new and new_with_positions instead of two
	times new.

	Merge from HEAD:

	* xs/Gtk2.xs: Link to Glib::version.

2004/04/04 12:56 (-0500) rwmcfa1
